# services/rider-service/internal/transport/grpc/rider_handler.go
@@ -6,6 +6,7 @@ import (
 	"log/slog"
 
 	riderv1 "github.com/7akoom/ride-platform/gen/go/ride/rider/v1"
+	"github.com/7akoom/ride-platform/services/rider-service/internal/application/address"
 	"github.com/7akoom/ride-platform/services/rider-service/internal/application/rider"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -17,6 +18,9 @@ type RiderHandler struct {
 
 	riderService rider.Service
 	logger       *slog.Logger
+
+	// addresses serves saved addresses; nil until WithAddresses.
+	addresses *address.Service
 }
 
 func NewRiderHandler(
